NetBSD Problem Report #47532
From martin@duskware.de Mon Feb 4 20:40:48 2013
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
by www.NetBSD.org (Postfix) with ESMTP id 4EACC63EDFA
for <gnats-bugs@gnats.NetBSD.org>; Mon, 4 Feb 2013 20:40:48 +0000 (UTC)
Date: Mon, 04 Feb 2013 21:40:46 CET
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: clear(1) or libterminfo broken
X-Send-Pr-Version: 3.95
>Number: 47532
>Category: lib
>Synopsis: clear(1) or libterminfo broken
>Confidential: no
>Severity: serious
>Priority: high
>Responsible: lib-bug-people
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Feb 04 20:45:00 +0000 2013
>Closed-Date: Tue Feb 05 19:52:32 +0000 2013
>Last-Modified: Thu Mar 14 15:50:07 +0000 2013
>Originator: Martin Husemann
>Release: NetBSD 6.99.16
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD night-owl.duskware.de 6.99.16 NetBSD 6.99.16 (NIGHT-OWL) #136: Thu Jan 31 21:32:23 CET 2013 martin@night-owl.duskware.de:/usr/src/sys/arch/amd64/compile/NIGHT-OWL amd64
Architecture: x86_64
Machine: amd64
>Description:
Not sure when this started, but it can only be a few days old: when using
clear(1) in -current an additional newline is added after clearing the
screen.
>How-To-Repeat:
$ clear | hexdump -C
00000000 1b 5b 48 1b 5b 32 4a 0a |.[H.[2J.|
00000008
while previously it (correctly) said:
00000000 1b 5b 48 1b 5b 32 4a |.[H.[2J|
00000007
>Fix:
n/a
>Release-Note:
>Audit-Trail:
From: "Roy Marples" <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/47532 CVS commit: src/usr.bin/tput
Date: Tue, 5 Feb 2013 11:31:57 +0000
Module Name: src
Committed By: roy
Date: Tue Feb 5 11:31:56 UTC 2013
Modified Files:
src/usr.bin/tput: tput.c
Log Message:
Use putp(3) to output our strings.
Fixes PR lib/47532
To generate a diff of this commit:
cvs rdiff -u -r1.25 -r1.26 src/usr.bin/tput/tput.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 05 Feb 2013 18:01:45 +0000
State-Changed-Why:
This doesn't affect -6, right? So if it's fixed, it can just be closed...
State-Changed-From-To: feedback->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Tue, 05 Feb 2013 19:52:32 +0000
State-Changed-Why:
Verified fixed, thanks!
From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/47532 CVS commit: [netbsd-6] src
Date: Thu, 14 Mar 2013 15:48:29 +0000
Module Name: src
Committed By: riz
Date: Thu Mar 14 15:48:29 UTC 2013
Modified Files:
src/lib/libterminfo [netbsd-6]: Makefile.hash genman term.h
term_private.h terminfo.3 terminfo.5.in tparm.c
src/usr.bin/tput [netbsd-6]: Makefile tput.c
Log Message:
Pull up following revision(s) (requested by roy in ticket #835):
lib/libterminfo/terminfo.3: revision 1.9
lib/libterminfo/term.h: revision 1.13
lib/libterminfo/term.h: revision 1.14
usr.bin/tput/Makefile: revision 1.11
lib/libterminfo/terminfo.3: revision 1.10
lib/libterminfo/genman: revision 1.5
lib/libterminfo/term_private.h: revision 1.11
usr.bin/tput/tput.c: revision 1.23
usr.bin/tput/tput.c: revision 1.24
usr.bin/tput/tput.c: revision 1.25
lib/libterminfo/tparm.c: revision 1.11
lib/libterminfo/Makefile.hash: revision 1.7
usr.bin/tput/tput.c: revision 1.26
lib/libterminfo/tparm.c: revision 1.12
lib/libterminfo/tparm.c: revision 1.13
lib/libterminfo/tparm.c: revision 1.14
lib/libterminfo/terminfo.5.in: revision 1.18
As tparm accepts longs we should treat them as long during expansion.
Also, fix the ~ and ! logic.
Move the strings vs long analysis to a private function, but allow
tput(1) to use it so we can work with string parameters to
capabilities.
Fix building our terminals with a non standard NETBSDSRCDIR, PR
lib/46793.
Thanks to Bernd Ernesti.
Remove debug accidently commited.
If char * > long then print a suitable error when passing a string
parameter.
For platforms where we cannot fit a char * into a long, return NULL
and set errno to ENOTSUPP.
Add descriptions for terminfo keys to term.h
These are extracted by genman and placed into the compiled terminfo.5
Fixes PR lib/47090
Provide a disabled implentation of tlparm and ti_tlparm for
completeness.
This also improves the readability of _ti_tiparm.
Use putp(3) to output our strings.
Fixes PR lib/47532
To generate a diff of this commit:
cvs rdiff -u -r1.4.4.1 -r1.4.4.2 src/lib/libterminfo/Makefile.hash
cvs rdiff -u -r1.4 -r1.4.8.1 src/lib/libterminfo/genman
cvs rdiff -u -r1.10.4.2 -r1.10.4.3 src/lib/libterminfo/term.h
cvs rdiff -u -r1.9.4.1 -r1.9.4.2 src/lib/libterminfo/term_private.h
cvs rdiff -u -r1.8 -r1.8.4.1 src/lib/libterminfo/terminfo.3
cvs rdiff -u -r1.15.6.1 -r1.15.6.2 src/lib/libterminfo/terminfo.5.in
cvs rdiff -u -r1.7.4.2 -r1.7.4.3 src/lib/libterminfo/tparm.c
cvs rdiff -u -r1.10 -r1.10.8.1 src/usr.bin/tput/Makefile
cvs rdiff -u -r1.22 -r1.22.4.1 src/usr.bin/tput/tput.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.