Use putp(3) to output our strings. Fixes PR lib/47532